--- a/server.properties
+++ b/server.properties
@@ -4,5 +4,6 @@ difficulty=hard
 max-players=25
 player-idle-timeout=15
 function-permission-level=4
+spawn-protection=0
 server-port=25565
 level-seed=
