--- a/server.properties
+++ b/server.properties
@@ -1,6 +1,6 @@
 #Minecraft server properties
 motd=\u00a7aClean Minecraft\u00a7r\n\u00a7eVanilla survival server
-difficulty=hard
+difficulty=normal
 max-players=25
 player-idle-timeout=15
 function-permission-level=4
