--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-motd=\u00a7aClean Minecraft\u00a7r\n\u00a7eVanilla survival server
+motd=\u00a7a\u00a7lClean Minecraft\u00a7r\n\u00a7c\u00a7oAnarchy \u00a78\u00a7o-\u00a7e\u00a7o Vanilla \u00a78\u00a7o-\u00a72\u00a7o Survival
 difficulty=normal
 max-players=25
 player-idle-timeout=15
