--- a/crontab.template
+++ b/crontab.template
@@ -1,3 +1,4 @@
 @reboot ~/cleanmcjava/start.sh
 0 0 * * * ~/cleanmcjava/restart.sh
 15 */3 * * * ~/cleanmcjava/update.sh
+*/5 * * * * cd ~/mcstats && python3 update.py config.json
